// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a quiz 1`] = `
Array [
  <header
    className="MuiPaper-root-1230 MuiPaper-elevation4-1236 MuiAppBar-root-1221 MuiAppBar-positionStatic-1225 MuiAppBar-colorPrimary-1228"
>
    <div
        className="MuiToolbar-root-1257 MuiToolbar-regular-1259 MuiToolbar-gutters-1258"
    >
        <h6
            className="MuiTypography-root-1261 MuiTypography-h6-1278 MuiTypography-colorInherit-1290"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-1296 MuiGrid-spacing-xs-16-1319 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-1297 MuiGrid-grid-xs-12-1336"
            >
                <center>
                    <img
                        alt=""
                        className="Connect-Widget--maxImageSize-4"
                        height={undefined}
                        src="https://openplatform.dbc.dk/v3/storage/3ac3d6ce-3c19-427c-88b3-ce11931186e1"
                        style={undefined}
                        width={undefined}
                    />
                </center>
            </div>
            <div
                className="MuiGrid-item-1297 MuiGrid-grid-xs-12-1336"
            >
                <div
                    className="MuiTypography-root-1261 MuiTypography-body1-1270"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<h1 id=\\"velkommen-til-quizzen\\">Velkommen til quizzen</h1>
                            <p>Ud i det blå</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-1297 MuiGrid-grid-xs-12-1336"
            >
                <button
                    className="MuiButtonBase-root-1419 MuiButton-root-1393 MuiButton-contained-1404 MuiButton-containedPrimary-1405 MuiButton-raised-1407 MuiButton-raisedPrimary-1408 MuiButton-fullWidth-1418"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-1394"
                    >
                        Start
                    </span>
                    <span
                        className="MuiTouchRipple-root-1422"
                    />
                </button>
            </div>
        </div>
    </div>
</center>,
]
`;

exports[`maps dispatch to props 1`] = `
Object {
  "onAction": [Function],
  "setQuizWidth": [Function],
}
`;

exports[`maps state to props 1`] = `
<div>
  "Quiz screen missing or loading..."
</div>
`;

exports[`renders a question 1`] = `
Array [
  <header
    className="MuiPaper-root-1022 MuiPaper-elevation4-1028 MuiAppBar-root-1013 MuiAppBar-positionStatic-1017 MuiAppBar-colorPrimary-1020"
>
    <div
        className="MuiToolbar-root-1049 MuiToolbar-regular-1051 MuiToolbar-gutters-1050"
    >
        <h6
            className="MuiTypography-root-1053 MuiTypography-h6-1070 MuiTypography-colorInherit-1082"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-1088 MuiGrid-spacing-xs-16-1111 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-1089 MuiGrid-grid-xs-12-1128"
            >
                <div
                    className="MuiTypography-root-1053 MuiTypography-body1-1062"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<p>Hvad er svaret</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-1089 MuiGrid-grid-xs-12-1128"
            >
                <div
                    className="MuiGrid-container-1088 MuiGrid-spacing-xs-16-1111"
                >
                    <div
                        className="MuiGrid-item-1089 MuiGrid-grid-xs-6-1122"
                    >
                        <button
                            className="MuiButtonBase-root-1211 MuiButton-root-1185 MuiButton-contained-1196 MuiButton-containedPrimary-1197 MuiButton-raised-1199 MuiButton-raisedPrimary-1200 MuiButton-fullWidth-1210"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-1186"
                            >
                                
                                
                                Svar A
                            </span>
                            <span
                                className="MuiTouchRipple-root-1214"
                            />
                        </button>
                    </div>
                    <div
                        className="MuiGrid-item-1089 MuiGrid-grid-xs-6-1122"
                    >
                        <button
                            className="MuiButtonBase-root-1211 MuiButton-root-1185 MuiButton-contained-1196 MuiButton-containedPrimary-1197 MuiButton-raised-1199 MuiButton-raisedPrimary-1200 MuiButton-fullWidth-1210"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-1186"
                            >
                                Svar B
                            </span>
                            <span
                                className="MuiTouchRipple-root-1214"
                            />
                        </button>
                    </div>
                    <div
                        className="MuiGrid-item-1089 MuiGrid-grid-xs-6-1122"
                    >
                        <button
                            className="MuiButtonBase-root-1211 MuiButton-root-1185 MuiButton-contained-1196 MuiButton-containedPrimary-1197 MuiButton-raised-1199 MuiButton-raisedPrimary-1200 MuiButton-fullWidth-1210"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-1186"
                            >
                                <img
                                    alt="Svar C"
                                    className={undefined}
                                    height={128}
                                    src="https://openplatform.dbc.dk/v3/storage/a6c4aa8f-8f42-4d97-a184-933c899885ab?height=128"
                                    style={
                                        Object {
                                            "borderRadius": 4,
                                          }
                                    }
                                    width={undefined}
                                />
                                <span>
                                     
                                </span>
                                Svar C
                            </span>
                            <span
                                className="MuiTouchRipple-root-1214"
                            />
                        </button>
                    </div>
                    <div
                        className="MuiGrid-item-1089 MuiGrid-grid-xs-6-1122"
                    />
                    <div
                        className="MuiGrid-item-1089 MuiGrid-grid-xs-6-1122"
                    >
                        <button
                            className="MuiButtonBase-root-1211 MuiButton-root-1185 MuiButton-contained-1196 MuiButton-containedPrimary-1197 MuiButton-raised-1199 MuiButton-raisedPrimary-1200 MuiButton-fullWidth-1210"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-1186"
                            >
                                <img
                                    alt=""
                                    className={undefined}
                                    height={128}
                                    src="https://openplatform.dbc.dk/v3/storage/d228c861-6d6c-4629-afa4-49b01bb04a52?height=128"
                                    style={
                                        Object {
                                            "borderRadius": 4,
                                          }
                                    }
                                    width={undefined}
                                />
                                <span>
                                     
                                </span>
                                
                            </span>
                            <span
                                className="MuiTouchRipple-root-1214"
                            />
                        </button>
                    </div>
                </div>
            </div>
            <div
                className="MuiGrid-item-1089 MuiGrid-grid-xs-12-1128"
            >
                <p />
            </div>
            <div
                className="MuiGrid-item-1089 MuiGrid-grid-xs-12-1128"
            >
                <button
                    className="MuiButtonBase-root-1211 MuiButton-root-1185 MuiButton-contained-1196 MuiButton-containedSecondary-1198 MuiButton-raised-1199 MuiButton-raisedSecondary-1201 MuiButton-fullWidth-1210"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-1186"
                    >
                        hjælp
                    </span>
                    <span
                        className="MuiTouchRipple-root-1214"
                    />
                </button>
            </div>
        </div>
    </div>
</center>,
]
`;

exports[`renders different endings 1`] = `
Array [
  <header
    className="MuiPaper-root-434 MuiPaper-elevation4-440 MuiAppBar-root-425 MuiAppBar-positionStatic-429 MuiAppBar-colorPrimary-432"
>
    <div
        className="MuiToolbar-root-461 MuiToolbar-regular-463 MuiToolbar-gutters-462"
    >
        <h6
            className="MuiTypography-root-465 MuiTypography-h6-482 MuiTypography-colorInherit-494"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-500 MuiGrid-spacing-xs-16-523 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-501 MuiGrid-grid-xs-12-540"
            >
                <div
                    className="MuiTypography-root-465 MuiTypography-body1-474"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<p>Spørgsmål?</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-501 MuiGrid-grid-xs-12-540"
            >
                <div
                    className="MuiGrid-container-500 MuiGrid-spacing-xs-16-523"
                >
                    <div
                        className="MuiGrid-item-501 MuiGrid-grid-xs-6-534"
                    >
                        <button
                            className="MuiButtonBase-root-623 MuiButton-root-597 MuiButton-contained-608 MuiButton-containedPrimary-609 MuiButton-raised-611 MuiButton-raisedPrimary-612 MuiButton-fullWidth-622"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-598"
                            >
                                Svar A
                            </span>
                            <span
                                className="MuiTouchRipple-root-626"
                            />
                        </button>
                    </div>
                    <div
                        className="MuiGrid-item-501 MuiGrid-grid-xs-6-534"
                    >
                        <button
                            className="MuiButtonBase-root-623 MuiButton-root-597 MuiButton-contained-608 MuiButton-containedPrimary-609 MuiButton-raised-611 MuiButton-raisedPrimary-612 MuiButton-fullWidth-622"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-598"
                            >
                                Svar B
                            </span>
                            <span
                                className="MuiTouchRipple-root-626"
                            />
                        </button>
                    </div>
                </div>
            </div>
            <div
                className="MuiGrid-item-501 MuiGrid-grid-xs-12-540"
            >
                <p />
            </div>
            <div
                className="MuiGrid-item-501 MuiGrid-grid-xs-12-540"
            >
                <button
                    className="MuiButtonBase-root-623 MuiButton-root-597 MuiButton-contained-608 MuiButton-containedSecondary-610 MuiButton-raised-611 MuiButton-raisedSecondary-613 MuiButton-fullWidth-622"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-598"
                    >
                        hjælp
                    </span>
                    <span
                        className="MuiTouchRipple-root-626"
                    />
                </button>
            </div>
        </div>
    </div>
</center>,
]
`;

exports[`renders different endings 2`] = `
Array [
  <header
    className="MuiPaper-root-642 MuiPaper-elevation4-648 MuiAppBar-root-633 MuiAppBar-positionStatic-637 MuiAppBar-colorPrimary-640"
>
    <div
        className="MuiToolbar-root-669 MuiToolbar-regular-671 MuiToolbar-gutters-670"
    >
        <h6
            className="MuiTypography-root-673 MuiTypography-h6-690 MuiTypography-colorInherit-702"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-708 MuiGrid-spacing-xs-16-731 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-709 MuiGrid-grid-xs-12-748"
            >
                <center>
                    <iframe
                        allow="autoplay; encrypted-media"
                        allowFullScreen={true}
                        frameborder="0"
                        height={432}
                        src="https://www.youtube.com/embed/JkMwq1aAAfE?autoplay=0"
                        title="YouTube Video"
                        width={768}
                    />
                </center>
            </div>
            <div
                className="MuiGrid-item-709 MuiGrid-grid-xs-12-748"
            >
                <div
                    className="MuiTypography-root-673 MuiTypography-body1-682"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<p>Tillykke, du havde  ud af  rigtige. Total: </p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-709 MuiGrid-grid-xs-12-748"
            >
                <button
                    className="MuiButtonBase-root-831 MuiButton-root-805 MuiButton-contained-816 MuiButton-containedPrimary-817 MuiButton-raised-819 MuiButton-raisedPrimary-820 MuiButton-fullWidth-830"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-806"
                    >
                        Prøv igen
                    </span>
                    <span
                        className="MuiTouchRipple-root-834"
                    />
                </button>
            </div>
        </div>
    </div>
</center>,
]
`;

exports[`renders different endings 3`] = `
Array [
  <header
    className="MuiPaper-root-850 MuiPaper-elevation4-856 MuiAppBar-root-841 MuiAppBar-positionStatic-845 MuiAppBar-colorPrimary-848"
>
    <div
        className="MuiToolbar-root-877 MuiToolbar-regular-879 MuiToolbar-gutters-878"
    >
        <h6
            className="MuiTypography-root-881 MuiTypography-h6-898 MuiTypography-colorInherit-910"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-916 MuiGrid-spacing-xs-16-939 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-917 MuiGrid-grid-xs-12-956"
            >
                <center>
                    <iframe
                        allow="autoplay; encrypted-media"
                        allowFullScreen={true}
                        frameborder="0"
                        height={432}
                        src="https://player.vimeo.com/video/218885093?autoplay=0"
                        title="Vimeo Video"
                        width={768}
                    />
                </center>
            </div>
            <div
                className="MuiGrid-item-917 MuiGrid-grid-xs-12-956"
            >
                <div
                    className="MuiTypography-root-881 MuiTypography-body1-890"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<p><strong>Error: Unclosed tag at 86</strong></p>
                            <p>Tillykke, du havde {{correct}} ud af {{questionCount}} rigtige, yeah... fejl: {{ hello</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
        </div>
    </div>
</center>,
]
`;

exports[`renders info pages 1`] = `
Array [
  <header
    className="MuiPaper-root-18 MuiPaper-elevation4-24 MuiAppBar-root-9 MuiAppBar-positionStatic-13 MuiAppBar-colorPrimary-16"
>
    <div
        className="MuiToolbar-root-45 MuiToolbar-regular-47 MuiToolbar-gutters-46"
    >
        <h6
            className="MuiTypography-root-49 MuiTypography-h6-66 MuiTypography-colorInherit-78"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-84 MuiGrid-spacing-xs-16-107 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-85 MuiGrid-grid-xs-12-124"
            >
                <center>
                    <img
                        alt=""
                        className="Connect-Widget--maxImageSize-4"
                        height={undefined}
                        src="https://openplatform.dbc.dk/v3/storage/3ac3d6ce-3c19-427c-88b3-ce11931186e1"
                        style={undefined}
                        width={undefined}
                    />
                </center>
            </div>
            <div
                className="MuiGrid-item-85 MuiGrid-grid-xs-12-124"
            >
                <div
                    className="MuiTypography-root-49 MuiTypography-body1-58"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<h1 id=\\"velkommen-til-quizzen\\">Velkommen til quizzen</h1>
                            <p>Ud i det blå</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-85 MuiGrid-grid-xs-12-124"
            >
                <button
                    className="MuiButtonBase-root-207 MuiButton-root-181 MuiButton-contained-192 MuiButton-containedPrimary-193 MuiButton-raised-195 MuiButton-raisedPrimary-196 MuiButton-fullWidth-206"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-182"
                    >
                        Start
                    </span>
                    <span
                        className="MuiTouchRipple-root-210"
                    />
                </button>
            </div>
        </div>
    </div>
</center>,
]
`;

exports[`renders info pages 2`] = `
Array [
  <header
    className="MuiPaper-root-226 MuiPaper-elevation4-232 MuiAppBar-root-217 MuiAppBar-positionStatic-221 MuiAppBar-colorPrimary-224"
>
    <div
        className="MuiToolbar-root-253 MuiToolbar-regular-255 MuiToolbar-gutters-254"
    >
        <h6
            className="MuiTypography-root-257 MuiTypography-h6-274 MuiTypography-colorInherit-286"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-292 MuiGrid-spacing-xs-16-315 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-293 MuiGrid-grid-xs-12-332"
            >
                <div
                    className="MuiTypography-root-257 MuiTypography-body1-266"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<p>Der er ikke mere <del>mælk</del> hjælp</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-293 MuiGrid-grid-xs-12-332"
            >
                <button
                    className="MuiButtonBase-root-415 MuiButton-root-389 MuiButton-contained-400 MuiButton-containedPrimary-401 MuiButton-raised-403 MuiButton-raisedPrimary-404 MuiButton-fullWidth-414"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-390"
                    >
                        Tilbage
                    </span>
                    <span
                        className="MuiTouchRipple-root-418"
                    />
                </button>
            </div>
        </div>
    </div>
</center>,
]
`;
